# impact.lab.wlg.2026-08-08

./: .env.example  .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.claude/skills/ai-claude/: SKILL.md
.claude/skills/create-module/: SKILL.md
.claude/skills/demo-prep/: SKILL.md
.claude/skills/geocoding/: SKILL.md
.claude/skills/loader-patterns/: SKILL.md
.claude/skills/onboard-module-contributor/: SKILL.md
.claude/skills/platform-overview/: SKILL.md
.claude/skills/plugin-sdk/: SKILL.md
.claude/skills/publish-signals/: SKILL.md
.claude/skills/scenario-feeds/: SKILL.md
.claude/skills/signal-schema/: SKILL.md
.devcontainer/: devcontainer.json  on-create.sh
.github/: CODEOWNERS
.github/scripts/: deployment-failure-drill.sh  rls-assertions.mjs  validate_sample.py
.github/workflows/: ci.yml  collect-newsroom.yml  deploy-supabase.yml
apps/dashboard/: next.config.ts  package.json  postcss.config.mjs  tsconfig.json  vercel.json
apps/dashboard/app/: globals.css  home-view.tsx  layout.tsx  page.tsx
apps/dashboard/components/: AudienceProvider.tsx  (+13 more)
apps/scenario/: README.md  package.json  timeline.json  tsconfig.json
docs/: CONTRACTS.md  contract-sources.md  durable-signal-ingestion.md  module-backends.md  module-contract-versioning.md  module-write-isolation.md  organiser-activity.md  quickstart.md  scalable-signal-queries.md  spatial-incident-triage.md  supabase-deployment.md
modules/_template/: README.md  module.config.ts  package.json  tsconfig.json
modules/_template/loader/: pyproject.toml
modules/_template/loader/src/: __init__.py  main.py
modules/demo-seed/: README.md  module.config.ts  package.json
modules/demo-seed/loader/: pyproject.toml
modules/demo-seed/loader/src/: main.py
modules/newsroom/: README.md  module.config.ts  package.json  tsconfig.json
modules/newsroom/loader/: pyproject.toml
modules/newsroom/loader/src/: __init__.py  main.py
modules/newsroom/loader/tests/: test_refresh.py
schema/: signal.schema.json
scripts/: apply-module-backends.sh  cloud-wire.sh  deploy-module-functions.sh  extract-python-api.py  gen-contract-docs.ts  gen-registry.ts  migrate-module-contract.ts  module-contract-migrations.ts  module-contract.test.ts  module-credentials.sh  new-module.ts  verify-deployed-schema.sh
supabase/: config.toml  seed.sql
supabase/migrations/: 20260722100000_init.sql  20260722100100_storage.sql  20260722100200_module_backends.sql  20260722100300_storage_upload_fn.sql  20260723100000_durable_signal_ingestion.sql  20260723110000_scalable_signal_queries.sql  20260723120000_module_write_isolation.sql  20260723130000_dashboard_layouts.sql  20260723212430_spatial_incident_triage.sql  20260724000918_serious_signal_pockets.sql
(+62 files in other folders)
